<resources>
    <string name="app_name">Playlist maker</string>

    <!-- Главный экран -->
    <string name="app_search">Поиск</string>
    <string name="app_library">Медиатека</string>
    <string name="app_settings">Настройки</string>

    <!-- Экран настроек -->
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_eula">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer</string>
    <string name="eula_url">https://yandex.ru/legal/practicum_offer/ru</string>
    <string name="support_mailto">malavita21@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!-- Экран поиска -->
    <string name="search_main">Поиск</string>
    <string name="search_empty_tracklist">Ничего не нашлось</string>
    <string name="search_error_tracklist">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_error_refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="search_clean_history">Очистить историю</string>

    <!-- Экран плеера -->
    <string name="audioplayer_tracktime">Длительность</string>
    <string name="audioplayer_album">Альбом</string>
    <string name="audioplayer_genre">Жанр</string>
    <string name="audioplayer_country">Страна</string>
    <string name="audioplayer_year">Год</string>

</resources>