<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/Header"
        style="@style/Header"
        />

    <Button
        android:id="@+id/search_button"
        android:text="@string/app_search"
        app:icon="@drawable/search"
        style="@style/MainButtonItem"
        />

    <Button
        android:id="@+id/library_button"
        android:text="@string/app_library"
        app:icon="@drawable/library"
        style="@style/MainButtonItem"/>

    <Button
        android:id="@+id/settings_button"
        android:text="@string/app_settings"
        app:icon="@drawable/settings"
        style="@style/MainButtonItem"/>
</LinearLayout>