<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsBack"
        app:title="@string/app_settings"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="?attr/colorOnSecondary"
        app:titleTextAppearance="@style/Header"
        app:contentInsetStartWithNavigation="64dp"
        style="@style/Header"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:gravity="center_vertical"
        android:text="@string/settings_dark_theme"
        style="@style/SettingsMenuItem" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareButton"
        android:drawableEnd="@drawable/share"
        android:text="@string/settings_share"
        style="@style/SettingsMenuItem"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportButton"
        android:drawableEnd="@drawable/support"
        android:text="@string/settings_support"
        style="@style/SettingsMenuItem"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/eulaButton"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/settings_eula"
        style="@style/SettingsMenuItem"/>
</LinearLayout>