<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/search"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchBack"
        app:title="@string/app_search"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="?attr/colorOnSecondary"
        app:titleTextAppearance="@style/Header"
        app:contentInsetStartWithNavigation="64dp"
        style="@style/Header"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_corners"
        android:paddingHorizontal="12dp"
        >

        <EditText
            android:id="@+id/searchMain"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/icon_padding"
            android:inputType="text"
            android:hint="@string/search_main"
            android:lines="1"
            android:maxLength="50"
            android:background="@android:color/transparent"
            style="@style/SearchField"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cross"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/gray"
            android:visibility="gone"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/emptyTracklist"
        android:drawablePadding="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_empty_tracklist"
        android:layout_gravity="center"
        android:layout_marginTop="102dp"
        style="@style/SearchErrors"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/empty_tracklist" />

    <LinearLayout
        android:id="@+id/errorTracklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:drawablePadding="@dimen/default_margin"
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_error_tracklist"
            android:layout_gravity="center"
            style="@style/SearchErrors"
            app:drawableTopCompat="@drawable/error_tracklist" />

        <Button
            android:id="@+id/searchRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_error_refresh"
            android:layout_marginTop="24dp"
            style="@style/MediumButtonItem"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:text="@string/search_history"
            style="@style/SearchHistory"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryTracklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <Button
            android:id="@+id/cleanHistory"
            android:layout_marginTop="24dp"
            style="@style/CleanHistoryButton"
            android:text="@string/search_clean_history"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>